apps/hero/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hero
  namespace: hero
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hero
  ports:
    - name: http
      port: 80
      targetPort: 80
